2004-07-14 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/mod_mono.c: use RLIMIT_AS instead of RLIMIT_DATA. gcc 3.2 doesn't
	like #ifdef inside macro parameters.

2004-07-14 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* configure.in: check for setrlimit.
	* src/mod_mono.c: added MonoMaxMemory and MonoMaxCPUTime directives. If
	set and setlimit is available, mod_mono will set those limits when
	spwning mod-mono-server.

2004-07-14 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/Makefile.am:
	* src/mod_mono.c:
	* src/mod_mono.h: moved conditional cruft to a header file. Fixed note
	on default value for MonoRunXSP. NOT_FOUND is defined in apache 1.3, so
	changed it to MYNOT_FOUND. Removed a few simple functions. In short,
	shuffling code.

2004-07-13 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/mod_mono.c: ap_conn_flush does a *final* flush on the connection,
	and that conflicts with mod_ssl handling of End-Of-Connection buckets,
	so, connection_flush is a noop now.
	See bug #60117 for details.

2004-07-13 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/mod_mono.c: added NOT_FOUND command and prevent invalid commands
	from crashing mod_mono.

2004-07-11 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* configure.in:
	* src/mod_mono.c: seems like apr_socket_connect is post 0.9.2 version
	of libapr.

2004-07-10 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/mod_mono.c: added listen port and listen address used when
	communicating with mod-mono-server over a TCP socket. Implemented
	apr_sockaddr_info_get and apr_socket_connect for apache 1.3. Pass
	--debug option when forking mono.

2004-07-08 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/mod_mono.c: removed more commands and send their data upon
	connection.

2004-07-07 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/mod_mono.c: removed the mutex stuff that prevented multiple forks
	no first request. It doesn't work on RH9 :-? (worked on debian sid with
	apache2 and 1.3).
